# sample_boto_app

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
